--- a/.htaccess
+++ b/.htaccess
@@ -2,4 +2,9 @@ RewriteEngine On
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-l
+
+# Redirige las solicitudes /api a tu backend
+RewriteRule ^api/(.*)$ api/index.php?url=$1 [QSA,L]
+
+# Redirige el resto al frontend
 RewriteRule ^(.+)$ index.php?url=$1 [QSA,L]
